# xcube-stac

./: .gitignore  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  environment_workflow.yml  pyproject.toml
.github/workflows/: unitest-workflow.yml  unittest-workflow.yml
archive/: helper.py  sen2.py  sen3.py
archive/mldataset/: single_item.py
examples/: analysis_profil.py  cdse_sen2.py  config_server_stack_items.yml  debug.py  debug_sen2.py  debug_sen3_lst.py  debug_sen3_lst_pc.py  debug_sen3_olci.py  debug_sen3_olci_pc.py  geotiff_nonsearchable_catalog.ipynb  geotiff_searchable_catalog.ipynb  netcdf_searchable_catalog.ipynb  nonsearchable_stac_catalog.ipynb  open_netcdf.py  open_tiff.py  open_tiff_https.py  output_debug.prof  searchable_stac_catalog.ipynb  sen3_analysis.py  sen3_lst.py  sen3_pc.prof  sen3_pc.py  stack_mode.py  xcube_s3.py  xcube_server_stac_s3.ipynb  xcube_viewer.py
examples/notebooks/: access_sen2.ipynb  access_sen2_stacktime_mosaicking.py  analysis_profil.py  cdse_sen2.py  cdse_senitnel_2.ipynb  cdse_sentinel_2.ipynb  cdse_sentinel_2_cdse.ipynb  cdse_sentinel_2_planetary_computer.ipynb  cdse_sentinel_3.ipynb  debug.py  earth_search_sentinel2_l2a_stack_mode.ipynb  eoforeststac_catalog.ipynb  geotiff_nonsearchable_catalog.ipynb  geotiff_searchable_catalog.ipynb  hls_planetary_computer.ipynb  monitor_resources.py  netcdf_searchable_catalog.ipynb  profile_output.prof  profile_output_new_resampling.prof  profile_output_old_resampling.prof  rioxarray_sen3.ipynb  sen3_analysis.ipynb  sentinel_2_cdse.ipynb  sentinel_2_planetary_computer.ipynb  sentinel_3_cdse.ipynb  sentinel_3_planetary_computer.ipynb  speedup_stacking.py  stack_mode.py  test_graph  xarray_sen3.ipynb  xcube_server_stac_s3.ipynb
examples/xcube_server/: README.md  config.yml  config_server_single_item_large_tile.yml  config_server_stack_items.yml  config_server_stack_items_mosaicking.yml
test/: __init__.py  sampledata.py  test.py  test_accessor.py  test_helper.py  test_href_parse.py  test_opener.py  test_plugin.py  test_stac.py  test_stack.py  test_store.py  test_utils.py
test/accessor/: test__init__.py  test_base.py  test_hls.py  test_sen2.py
test/cassettes/test_opener/: StacDataOpenerTest.test_describe_data.yaml  StacDataOpenerTest.test_get_open_data_params_schema.yaml  StacDataOpenerTest.test_open_data.yaml
test/cassettes/test_stac/: StacTest.test_assert_bbox_intersect.yaml  StacTest.test_assert_datetime.yaml  StacTest.test_do_bboxes_intersect.yaml  StacTest.test_get_data_ids.yaml  StacTest.test_get_data_ids_from_items.yaml  StacTest.test_get_data_ids_optional_args.yaml  StacTest.test_get_data_ids_optional_args_empty_args.yaml  StacTest.test_get_item_collection.yaml  StacTest.test_get_item_collection_open_params.yaml  StacTest.test_get_item_collection_searchable_catalog.yaml  StacTest.test_get_open_data_params_schema.yaml  StacTest.test_is_datetime_in_range.yaml  StacTest.test_open_data.yaml
test/cassettes/test_store/: StacDataOpenerTest.test_describe_data.yaml  StacDataOpenerTest.test_get_open_data_params_schema.yaml  (+68 more)
test/stac_extension/: __init__.py  test_raster.py
xcube_stac/: __init__.py  _href_parse.py  _utils.py  accessor.py  constants.py  helper.py  href_parse.py  impl.py  mldataset.py  modes.py  opener.py  plugin.py  reproject.py  stac.py  stac_objects.py  stack.py  store.py  store_mode.py  util.py  utils.py  version.py
xcube_stac/accessor/: __init__.py  https.py  s3.py  sen2.py  sen3.py
xcube_stac/accessors/: __init__.py  base.py  hls.py  sen2.py  sen3.py
xcube_stac/archive/: helper.py  s3.py  sen3.py  store_mode.py
xcube_stac/mldataset/: jp2.py  single_item.py
xcube_stac/sen2/: constants.py  read_metadata.py
xcube_stac/stac_extension/: __init__.py  raster.py
